# crypto-inspector

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCS.md  Dockerfile  Dockerfile.standalone  Makefile  README.md  SENSOR_EXAMPLES.md  alembic.ini  backtest_results_2024.json  build.yaml  codecov.yml  comprehensive_ml_analysis_summary.json  config.yaml  demo_backtest_results.json  docker-compose.yml  enhanced_backtest_results.json  extended_backtest_2y_detailed.json  extended_backtest_2y_summary.json  integration_demo_report.json  main.yaml  ml_backtest_results_2024.json  ml_sensor_sample_data.json  pyproject.toml  pytest.ini  repository.yaml  requirements.txt  walk_forward_results.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  docs.yml  lint-autofix.yml  pr-labeler.yml  release.yml  stale.yml
.qoder/rules/: main.md
alembic/: env.py
alembic/versions/: 201b0d1e8ea9_add_ml_prediction_records_and_ml_model_.py  7c7ba6464e14_add_candlestick_records_table.py  80d9d02135d1_add_sensor_states_table.py  932064f532ad_add_traditional_asset_records_table.py
blueprints/: adaptive_notifications.yaml  daily_digest.yaml  dca_reminder.yaml  drawdown_alert.yaml  evening_briefing.yaml  goal_milestone.yaml  morning_briefing.yaml  portfolio_milestone.yaml  risk_alert.yaml  whale_alert.yaml
crypto_analyzer/: TODO.md  __init__.py  ai_analyzer.py  analysis.py  arbitrage.py  backfill_history.py  bybit_balance.py  collector.py  config.yaml  config_loader.py  cycles.py  database.py  defi_tracker.py  derivatives.py  ha_integration.py  import_history_ha.py  macro.py  ml_predictor.py  mtf_analysis.py  news_parser.py  onchain.py  options_flow.py  patterns.py  requirements.txt  run_analysis.py  scoring.py  sentiment.py  whale_tracker.py
custom_components/crypto_inspect/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
dashboards/: crypto_charts.yaml  crypto_master.yaml  market_overview.yaml  technical_analysis.yaml  tradingview_charts.yaml  unlock_events.yaml
dashboards/cards/: README.yaml
dashboards/views/: adaptive_notifications.yaml  ai_analytics.yaml  correlation_analysis.yaml  detailed.yaml  economic_calendar.yaml  gas_prices.yaml  power_user.yaml  summary.yaml  system_diagnostics.yaml
github/linters/: .shfmt.yaml
github/workflows/: daily_stale.yml  on_issues.yml  onpush_builder.yaml  weekly_crlftolf.yaml  weekly_reduceimagesize.yml
ha/: input_helpers.yaml  sensor_inventory.yaml  smart_home_panel.yaml
ha/automations/: README.yaml  briefings_events.yaml  dca_strategy.yaml  market_sentiment.yaml  portfolio_risk.yaml  price_alerts.yaml  technical_analysis.yaml  whale_onchain.yaml
ha/blueprints/: ai_report.yaml  daily_digest.yaml  fear_greed_alert.yaml  gas_price_alert.yaml  market_phase_change.yaml  price_alert.yaml  rsi_alert.yaml  technical_signal.yaml  weekly_summary.yaml
ha/dashboards/: advanced_analytics.yaml  alerts_signals.yaml  backtesting.yaml  crypto_charts.yaml  crypto_compact.yaml  crypto_inspect.yaml  crypto_master.yaml  portfolio_dashboard.yaml  traditional_markets.yaml  widget.yaml
lightning_logs/version_0/: events.out.tfevents.1768769696.macbook-pro.lan.90839.0  events.out.tfevents.1768769699.macbook-pro.lan.90839.1  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1768770037.macbook-pro.lan.98475.0  events.out.tfevents.1768770039.macbook-pro.lan.98475.1  hparams.yaml
lightning_logs/version_10/: events.out.tfevents.1768771189.macbook-pro.lan.2811.2  events.out.tfevents.1768771190.macbook-pro.lan.2811.3  hparams.yaml
lightning_logs/version_100/: events.out.tfevents.1768771354.macbook-pro.lan.3070.174  events.out.tfevents.1768771354.macbook-pro.lan.3070.175
lightning_logs/version_101/: events.out.tfevents.1768771355.macbook-pro.lan.3070.176  events.out.tfevents.1768771356.macbook-pro.lan.3070.177  hparams.yaml
lightning_logs/version_102/: events.out.tfevents.1768771357.macbook-pro.lan.3070.178  events.out.tfevents.1768771357.macbook-pro.lan.3070.179
lightning_logs/version_103/: events.out.tfevents.1768771358.macbook-pro.lan.3070.180  events.out.tfevents.1768771358.macbook-pro.lan.3070.181
lightning_logs/version_104/: events.out.tfevents.1768771359.macbook-pro.lan.3070.182  events.out.tfevents.1768771359.macbook-pro.lan.3070.183
lightning_logs/version_105/: events.out.tfevents.1768771360.macbook-pro.lan.3070.184  events.out.tfevents.1768771361.macbook-pro.lan.3070.185
lightning_logs/version_106/: events.out.tfevents.1768771361.macbook-pro.lan.3070.186  events.out.tfevents.1768771362.macbook-pro.lan.3070.187
lightning_logs/version_107/: events.out.tfevents.1768771363.macbook-pro.lan.3070.188  events.out.tfevents.1768771363.macbook-pro.lan.3070.189
lightning_logs/version_108/: events.out.tfevents.1768771364.macbook-pro.lan.3070.190  events.out.tfevents.1768771364.macbook-pro.lan.3070.191  hparams.yaml
lightning_logs/version_109/: events.out.tfevents.1768771365.macbook-pro.lan.3070.192  (+1 more)
scripts/: check-version-sync.sh  check_data.py  comprehensive_ml_analysis.py  debug_chronos.py  debug_coingecko.py  demo_backtest.py  demo_ml_sensors.py  enhanced_accuracy_system.py  extended_backtest_2y.py  final_backtest_2024.py  full_enhanced_backtest.py  generate_docs.py  generate_icons.py  integration_demo.py  integration_summary.py  production_integration.py  run_all_jobs.py  run_backtest_2024.py  simple_backtest.py  sync-requirements.sh  test_chronos.py  test_coingecko_client.py  test_lazy_investor.py
src/: main.py
tests/: __init__.py  conftest.py
translations/: en.json  ru.json
(+1127 files in other folders)
