[project]
name = "crypto-inspect"
version = "0.2.13"
description = "Crypto inspection application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "aiosqlite>=0.19.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "websockets>=12.0",
    "greenlet>=3.3.0",
    "fastmcp>=2.0.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
src = ["src"]
exclude = ["alembic/versions/*", "crypto_analyzer/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E741", "UP038"]

[tool.ruff.lint.per-file-ignores]
"src/services/analysis/explanations.py" = ["E501"]
"scripts/generate_docs.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
