[project]
name = "crypto-inspect"
version = "0.2.30"
description = "Crypto inspection application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "aiosqlite>=0.19.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "websockets>=12.0",
    "greenlet>=3.3.0",
    "fastmcp>=2.0.0",
    "yfinance>=0.2.0",
    # ML Forecasting
    "chronos-forecasting>=1.4.0",   # Amazon Chronos Bolt
    "torch>=2.0.0",                  # PyTorch backend
    "statsforecast>=1.7.0",          # AutoARIMA, AutoETS
    "neuralprophet>=0.8.0",          # Facebook NeuralProphet
    "optuna>=3.5.0",                 # Hyperparameter optimization
    "numpy>=1.26.0",
    "pandas>=2.0.0",
]

[tool.uv]
# Use CPU-only PyTorch on Linux (Docker) to reduce image size by ~2-3GB
# On macOS ARM, use default PyPI
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
    "faker>=28.0.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
src = ["src"]
exclude = ["alembic/versions/*", "crypto_analyzer/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E741", "UP038"]

[tool.ruff.lint.per-file-ignores]
"src/services/analysis/explanations.py" = ["E501"]
"scripts/generate_docs.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -s -m 'not slow'"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring database connection",
    "e2e: marks end-to-end backtest tests",
    "backtest: marks backtest tests with hyperparameter optimization",
    "unit: marks unit tests",
    "smoke: marks smoke tests for quick validation",
]
